[REFACTOR]: web-ui: update TagInput for prevent the cursor of text area jumps back to the beginning

--- a/packages/web-ui/src/core/TagInput/index.less
+++ b/packages/web-ui/src/core/TagInput/index.less
@@ -33,21 +33,27 @@
         }
     }
 
-    textarea {
-        resize: none;
-        width: 100%;
-        margin: 0 5px;
-        background: transparent;
-        font-size: 16px;
-        border: 0;
+    .text-area-wrapper {
         position: relative;
-        z-index: 2;
+        width: 100%;
 
-        &:focus,
-        &:active,
-        &:visited {
+        textarea {
+            resize: none;
+            width: 100%;
+            margin: 0 5px;
+            background: transparent;
+            font-size: 16px;
             border: 0;
-            outline: none;
+            position: relative;
+            z-index: 2;
+
+            &:focus,
+            &:active,
+            &:visited {
+                border: 0;
+                outline: none;
+                position: absolute;
+            }
         }
     }
 }
